--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul{
 .header{
     background-color: var(--black);
     box-shadow: 1px 1px 5px 0px var(--grey);
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
 }
@@ -45,7 +45,7 @@ ul{
 }
 
 /* Nav menu */
-.nav{
+.nav {
     width: 100%;
     height: 100%;
     position: fixed;
