--- a/style.css
+++ b/style.css
@@ -13,9 +13,14 @@
     box-sizing: border-box;
 }
 
-body{
+html {
+    height: 100%;
+}
+
+body {
     background-color: var(--white);
     font-family: "Poppins", sans-serif;
+    height: 100%;
 }
 
 a{
@@ -26,58 +31,54 @@ ul{
     list-style: none;
 }
 
-/* Header */
-.header{
+/* header */
+
+.header {
     background-color: var(--black);
     box-shadow: 1px 1px 5px 0px var(--grey);
+    width: 100%;
     position: fixed;
     top: 0;
-    width: 100%;
 }
 
-/* Logo */
-.logo{
+.logo {
     display: inline-block;
     color: var(--white);
     font-size: 60px;
     margin-left: 10px;
-
 }
 
-/* Nav menu */
 .nav {
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: var(--black);
     overflow: auto;
-    
+    background-color: rgb(103 103 103);
+    padding-bottom: 90px;
 }
 
-.menu a{
+.menu a {
     display: block;
     padding: 30px;
     color: var(--white);
 
 }
 
-.menu a:hover{
+.menu a:hover {
     background-color: var(--grey);
 }
 
-.nav{
+.nav {
     max-height: 0;
     transition: max-height .5s ease-out;
+    padding-bottom: 0;
 }
 
-/* Menu Icon */
-
-.hamb{
+.hamb {
     cursor: pointer;
-    float: right;
     padding: 40px 20px;
+    float: right;
 }
-
 
 .hamb-line {
     background: var(--white);
@@ -85,7 +86,6 @@ ul{
     height: 2px;
     position: relative;
     width: 24px;
-    
 }
 
 .hamb-line::before,
@@ -107,14 +107,11 @@ ul{
     top: -5px;
 }
 
-
 .side-menu {
     display: none;
 }
 
-/* Toggle menu icon */
-
-.side-menu:checked ~ nav{
+.side-menu:checked ~ .nav {
     max-height: 100%;
 }
 
@@ -132,6 +129,12 @@ ul{
     transform: rotate(45deg);
     top:0;
 }
+
+@media all and (max-width: 768px) {
+    .lock {
+      overflow: hidden;
+    }
+  }
 
 
 /* Responsiveness */
