--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul{
     background-color: var(--black);
     box-shadow: 1px 1px 5px 0px var(--grey);
     width: 100%;
-    position: sticky;
+    position: fixed;
     top: 0;
 }
 
